<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".G_SHEBA_Tips">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="G_SHEBA TIPS"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_margin = "10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp">
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tips"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GASTRIC HEALTH "
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"

            />
        <LinearLayout
            android:layout_marginRight="120dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="3dp">
        </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="#00FFE1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What is Gastric Health? "
            android:textStyle="normal"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_marginRight="120dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="3dp">
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description1"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="#00FFE1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Why is Gastric Health Important?"
            android:textStyle="normal"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="3dp">
        </LinearLayout>
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description2"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="3dp">
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="How Can you Improve your Gastric Health? "
            android:textStyle="normal"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="3dp">
        </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="#00FFE1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.Eat a healthy diet"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_marginRight="190dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp">
        </LinearLayout>
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/htl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description3"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="#00FFE1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2.Drink plenty of water"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_marginRight="140dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp">
        </LinearLayout>
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description4"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="#00FFE1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.Reduce stress levels"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_marginRight="140dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp">
        </LinearLayout>
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/yoga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description5"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="#00FFE1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.The Role of Aggressive Factors"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
           />
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp">
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description6"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="#00FFE1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5.The Role of Protective Factors"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp">
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description7"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="#00FFE1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6.Maintaining a Healthy Gut Balance"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
           />
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp">
        </LinearLayout>
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/yogapose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description8"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
        <Button
            android:id="@+id/buttontipsId"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Go to Home page"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:backgroundTint="#F8385F"

            />






    </LinearLayout>

</ScrollView>